llvm-toolchain-10 (1:10.0.0~+rc2-2) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Bring back libfuzzer, for some reasons I don't remember
    I disabled it:
    https://bugs.llvm.org/show_bug.cgi?id=41956

  [ Aurelien Jarno ]
  * Also disable hwasan_symbolize on mipsel mips64el riscv64

  [ Gianfranco Costamagna ]
  * Patch to convert old python3 cgi method into the new html one

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 29 Feb 2020 14:04:22 +0100

llvm-toolchain-10 (1:10.0.0~+rc2-1) unstable; urgency=medium

  * Upload to unstable to get ci.debian.net testing
  * Also disable hwasan_symbolize on armel s390x powerpc ppc64

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 16 Feb 2020 14:50:53 +0100

llvm-toolchain-10 (1:10.0.0~+rc2-1~exp1) experimental; urgency=medium

  * Second RC release
    - Should fix the s390x issue (reported upstream)
    (Closes: #950900)
  * Do not try to install hwasan_symbolize on armhf ppc64el
    as it isn't built
    (Closes: #950899)

  [ Samuel Thibault ]
  * hurd/hurd-cxx-paths.diff: Fix patch so it can be applied.
  * clang-tools-X.Y.install.in: Do not try to install hwasan_symbolize on
    hurd-any.

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 06 Feb 2020 10:37:39 +0100

llvm-toolchain-10 (1:10.0.0~+rc1-1~exp1) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * fix lldb-10 -P path print (Closes: #945445)
  * Fix lldb python installation path and symlinks
  * Drop version constraint from libffi-dev library, satisfied since
    old-old-stable

  [ Sylvestre Ledru ]
  * First RC release
  * For now, disable ThinLTO usage because:
      - LLVM_ENABLE_LTO doesn't work with gcc >= 9 (option not accepted)
      - BOOTSTRAP_LLVM_ENABLE_LTO is producing some large binary
        (uses llvm ir instead of binary code)
        See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=943623
  * Thanks to this previous change, don't hardcode gcc 8
